--- a/index.html
+++ b/index.html
@@ -34,10 +34,25 @@
         molestiae possimus aperiam! Modi perferendis aut error laboriosam alias sint deleniti aliquid nobis ex eveniet
         repudiandae nisi tenetur earum voluptatibus adipisci, ad nesciunt veritatis incidunt soluta? Minima sapiente
         perspiciatis corrupti id accusantium omnis nostrum doloremque modi? Impedit, rem at.</p>
-
+    </div>
+    <div class="box-2">
+      <h1>More CSS</h1>
+      <p class="small-font">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat facere voluptatem earum
+        consequatur eligendi
+        aut ipsa quam tempora ipsam eius. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus aliquam porro
+        molestiae possimus aperiam! Modi perferendis aut error laboriosam alias sint deleniti aliquid nobis ex eveniet
+        repudiandae nisi tenetur earum voluptatibus adipisci, ad nesciunt veritatis incidunt soluta? Minima sapiente
+        perspiciatis corrupti id accusantium omnis nostrum doloremque modi? Impedit, rem at.</p>
     </div>
 
-
+    <div class="categories">
+      <h2>Categories</h2>
+      <ul>
+        <li><a href="#">Catch</a></li>
+        <li><a href="#">A Tiger</a></li>
+        <li><a href="#">By The Toe</a></li>
+      </ul>
+    </div>
   </div>
 
   <div style="margin-top: 500px"></div>
