--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         molestiae possimus aperiam! Modi perferendis aut error laboriosam alias sint deleniti aliquid nobis ex eveniet
         repudiandae nisi tenetur earum voluptatibus adipisci, ad nesciunt veritatis incidunt soluta? Minima sapiente
         perspiciatis corrupti id accusantium omnis nostrum doloremque modi? Impedit, rem at.</p>
+      <a href="#" class="button">Read More</a>
     </div>
 
     <div class="categories">
@@ -53,6 +54,65 @@
         <li><a href="#">By The Toe</a></li>
       </ul>
     </div>
+
+    <form class="my-form">
+      <div class="form-group">
+        <label>Name:</label>
+        <input type="text" name="name">
+      </div>
+      <div class="form-group">
+        <label>Email:</label>
+        <input type="text" name="email">
+      </div>
+      <div class="form-group">
+        <label>Message:</label>
+        <textarea name="message" id="message" cols="30" rows="10" placeholder="Message..."></textarea>
+      </div>
+      <input type="submit" class="button" value="Submit">
+    </form>
+
+    <div class="block">
+      <h3>Heading One</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis illum assumenda ipsum eos harum consequatur
+        cupiditate iste itaque distinctio fugit maiores, voluptate, aspernatur laboriosam officiis iusto in amet,
+        aliquid soluta! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate dignissimos, incidunt eos
+        ipsum aspernatur veniam nesciunt nobis sit temporibus amet est exercitationem ex magnam quaerat iste quo facere
+        accusantium non.</p>
+    </div>
+    <div class="block">
+      <h3>Heading Two</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis illum assumenda ipsum eos harum consequatur
+        cupiditate iste itaque distinctio fugit maiores, voluptate, aspernatur laboriosam officiis iusto in amet,
+        aliquid soluta! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate dignissimos, incidunt eos
+        ipsum aspernatur veniam nesciunt nobis sit temporibus amet est exercitationem ex magnam quaerat iste quo facere
+        accusantium non.</p>
+    </div>
+    <div class="block">
+      <h3>Heading Three</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis illum assumenda ipsum eos harum consequatur
+        cupiditate iste itaque distinctio fugit maiores, voluptate, aspernatur laboriosam officiis iusto in amet,
+        aliquid soluta! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate dignissimos, incidunt eos
+        ipsum aspernatur veniam nesciunt nobis sit temporibus amet est exercitationem ex magnam quaerat iste quo facere
+        accusantium non.</p>
+    </div>
+    <div class="clr"></div>
+
+    <div id="main-block">
+      <h3>Main Block</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio maiores architecto quibusdam sapiente
+        corporis at natus non omnis eos enim nisi deleniti, vitae necessitatibus! Consequatur necessitatibus quasi
+        fugiat velit, quos quam, rem laborum esse consectetur tempora ipsa sunt ducimus eveniet.</p>
+    </div>
+
+    <div id="sidebar">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit sit inventore quidem quasi dolorem ipsa
+        quaerat numquam exercitationem vitae necessitatibus, unde distinctio minima corporis delectus. Voluptatem
+        distinctio esse minus sequi dicta culpa soluta qui voluptatum.</p>
+    </div>
+
+    <div class="clr"></div>
+
+
   </div>
 
   <div style="margin-top: 500px"></div>
