--- a/index.html
+++ b/index.html
@@ -112,6 +112,16 @@
 
     <div class="clr"></div>
 
+    <!-- PSEUDO ELEMENTS -->
+
+    <ul class="my-list">
+      <li>List Item</li>
+      <li>List Item</li>
+      <li>List Item</li>
+      <li>List Item</li>
+      <li>List Item</li>
+    </ul>
+
 
   </div>
 
